--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -61,7 +61,7 @@ const projects = [
   </h2>
   {
     projects.map((el) => (
-      <div class="flex justify-center items-center gap-4 border-b p-3">
+      <div class="flex flex-col sm:flex-row justify-center items-center gap-4 border-b p-3">
         <Image
           src={el.urlImg}
           alt={el.name}
