--- a/src/components/SocialMedias.astro
+++ b/src/components/SocialMedias.astro
@@ -1,15 +1,57 @@
 <div class="w-auto flex justify-center items-center gap-4">
-    <a href="https://www.youtube.com/@programayacode" class="flex gap-2 justify-center items-center text-blue-400">
-        <svg viewBox="0 0 256 180" width="25" height="18" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid"><path d="M250.346 28.075A32.18 32.18 0 0 0 227.69 5.418C207.824 0 127.87 0 127.87 0S47.912.164 28.046 5.582A32.18 32.18 0 0 0 5.39 28.24c-6.009 35.298-8.34 89.084.165 122.97a32.18 32.18 0 0 0 22.656 22.657c19.866 5.418 99.822 5.418 99.822 5.418s79.955 0 99.82-5.418a32.18 32.18 0 0 0 22.657-22.657c6.338-35.348 8.291-89.1-.164-123.134Z" fill="#FFF"/><path fill="black" d="m102.421 128.06 66.328-38.418-66.328-38.418z"/></svg>
-        <span>My Channel</span>
-    </a>
-    <a href="https://www.linkedin.com/in/luis-angel-fern%C3%A1ndez-9073282bb/" class="flex gap-2 justify-center items-center text-blue-400">
-        <svg width="25" height="25" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 256"><path d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009-.002-12.157 9.851-22.014 22.008-22.016 12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453" fill="#FFF"/></svg>
-        <span>LinkedIn</span>
-    </a>
-    <a href="../../public/CV.pdf" download="cv.pdf" class="text-yellow-300 flex justify-center items-center bg-gray-800 border border-blue-400  rounded-3xl p-2 text-xs">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-          </svg>
-                <span>Download CV</span></a>
+  <a
+    href="https://www.youtube.com/@programayacode"
+    class="flex gap-2 justify-center items-center text-blue-400"
+  >
+    <svg
+      viewBox="0 0 256 180"
+      width="25"
+      height="18"
+      xmlns="http://www.w3.org/2000/svg"
+      preserveAspectRatio="xMidYMid"
+      ><path
+        d="M250.346 28.075A32.18 32.18 0 0 0 227.69 5.418C207.824 0 127.87 0 127.87 0S47.912.164 28.046 5.582A32.18 32.18 0 0 0 5.39 28.24c-6.009 35.298-8.34 89.084.165 122.97a32.18 32.18 0 0 0 22.656 22.657c19.866 5.418 99.822 5.418 99.822 5.418s79.955 0 99.82-5.418a32.18 32.18 0 0 0 22.657-22.657c6.338-35.348 8.291-89.1-.164-123.134Z"
+        fill="#FFF"></path><path
+        fill="black"
+        d="m102.421 128.06 66.328-38.418-66.328-38.418z"></path></svg
+    >
+    <span>My Channel</span>
+  </a>
+  <a
+    href="https://www.linkedin.com/in/luis-angel-fern%C3%A1ndez-9073282bb/"
+    class="flex gap-2 justify-center items-center text-blue-400"
+  >
+    <svg
+      width="25"
+      height="25"
+      xmlns="http://www.w3.org/2000/svg"
+      preserveAspectRatio="xMidYMid"
+      viewBox="0 0 256 256"
+      ><path
+        d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009-.002-12.157 9.851-22.014 22.008-22.016 12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453"
+        fill="#FFF"></path></svg
+    >
+    <span>LinkedIn</span>
+  </a>
+  <a
+    href="../public/CV.pdf"
+    target="_blank"
+    class="text-yellow-300 flex justify-center items-center gap-2 bg-gray-800 border border-blue-400 rounded-3xl p-2 text-xs"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      class="size-5"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"
+      ></path>
+    </svg>
+    <span>Download CV</span></a
+  >
 </div>
