--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,8 @@
-<footer class="text-white p-4">
-    <p>&copy; 2024 Luis Angel Fernandez. All Rights Reserved.</p>
+---
+ const date = new Date()
+ const year = date.getFullYear()
+---
+
+<footer class="text-white p-4 text-sm">
+    <p>&copy; {year} Luis Angel Fernandez. All Rights Reserved.</p>
 </footer>
