--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,13 +6,19 @@
             <path fill-rule="evenodd" d="m12.556 17.329 4.183 4.182a3.375 3.375 0 0 0 4.773-4.773l-3.306-3.305a6.803 6.803 0 0 1-1.53.043c-.394-.034-.682-.006-.867.042a.589.589 0 0 0-.167.063l-3.086 3.748Zm3.414-1.36a.75.75 0 0 1 1.06 0l1.875 1.876a.75.75 0 1 1-1.06 1.06L15.97 17.03a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
           </svg>
       <span>My Skills</span></h2>
+      <p class="text-sm text-white w-60 text-center p-2">I love the javascript ecosystem, that's why my skills are technologies of this powerful programming language. These are the main ones:</p>
       <div class="grid grid-cols-4 place-items-center gap-2 mt-2 w-[300px] bg-slate-800 p-2 rounded-md">
         <img src="https://www.logo.wine/a/logo/React_(web_framework)/React_(web_framework)-Logo.wine.svg" alt="react" class="w-[60px] h-[60px]">
         <img src="https://velog.velcdn.com/images/iinhyechoii/post/4d3af618-f71f-41b3-92b6-3da1472998fb/image.png" alt="tailwind" class="w-[60px] h-[60px]">
         <img src="https://cdn.worldvectorlogo.com/logos/astrojs.svg" alt="astro" class="w-[60px] h-[60px]">
-        <img src="https://cdn.worldvectorlogo.com/logos/next-js.svg" alt="next" class="w-[60px] h-[60px]">
+        <img src="https://img.icons8.com/fluent-systems-filled/200/FFFFFF/nextjs.png" alt="next" class="w-[60px] h-[60px]">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/NestJS.svg" alt="nest" class="w-[60px] h-[60px]">
-        <img src="https://static-00.iconduck.com/assets.00/node-js-icon-454x512-nztofx17.png" alt="node" class="w-[40px] h-[50px]">
+        <img src="https://static-00.iconduck.com/assets.00/node-js-icon-454x512-nztofx17.png" alt="node" class="w-[45px] h-[50px]">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/2048px-Typescript_logo_2020.svg.png" alt="ts" class="w-[50px] h-[50px]">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Vitejs-logo.svg/1200px-Vitejs-logo.svg.png" alt="vite" class="w-[50px] h-[50px]">
+        <img src="https://static-00.iconduck.com/assets.00/git-icon-2048x2048-juzdf1l5.png" alt="git" class="w-[50px] h-[50px]">
+        <img src="https://www.rapidbrains.com/assets/img/services/rapidbrains-expressjs.webp" alt="express" class="w-[50px] h-[50px]">
+        <img src="https://reactrouter.com/_brand/React%20Router%20Brand%20Assets/React%20Router%20Logo/Light.png" alt="router-dom" class="w-[50px] h-[35px]">
+        <img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="supabase" class="w-[40px] h-[50px]">
     </div>
 </article>
