--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,7 +9,14 @@
     business: 'Glowish Fashion',
     years: 'now',
     desc: 'I am working as a freelance developer for a clothing store called glowish fashion, developing an inventory system and product catalog.'
- }]
+ },
+ {
+    title: 'Tutor on udemy',
+    business: 'Udemy',
+    years: 'now',
+    desc: 'I teach javascript from scratch with my course ¨JavaScript Ninja¨ on this platform.'
+ },
+ ]
 ---
 <article class="w-auto flex justify-center items-center flex-col mt-2" id="experience">
     <h2 class="text-2xl font-extrabold text-white uppercase flex justify-center items-center gap-3">
