--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Skills from '../components/Skills.astro'
 import Experience from '../components/Experience.astro'
 import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
+import About from '../components/About.astro';
 ---
 
 <Layout title="I'm Angel">
@@ -14,6 +15,7 @@ import Footer from '../components/Footer.astro';
 		<Navbar />
 		<CardProfile />
 		<SocialMedias />
+		<About />
 		<Skills />
 		<Experience />
 		<Projects />
