--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -70,7 +70,7 @@ const years = Math.floor((today.getTime() - dateBirthday.getTime()) / (1000 * 60
           <span>Contact me</span>
         </a>
         <a
-          href="../public/CV.pdf"
+          href="/CV.pdf"
           target="_blank"
           class="text-yellow-300 flex justify-center items-center gap-2 bg-gray-800 border border-blue-400 rounded-3xl p-2 text-xs"
         >
