--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,11 @@
 <nav class="w-full flex justify-center items-center h-[100px]">
   <ul
-    class="w-[80%] sm:w-auto p-2 bg-white mt-2 fixed z-10 top-5 text-blue-500 text-xs sm:text-sm rounded-lg flex justify-center items-center gap-4 font-semibold"
+    class="w-[90%] sm:w-auto p-2 bg-white mt-2 fixed z-10 top-5 text-blue-500 text-xs sm:text-sm rounded-lg flex justify-center items-center gap-4 font-semibold"
   >
     <li>
       <a
         href="#about"
-        class="flex flex-col sm:flex-row gap-2 justify-center items-center transition-all hover:text-blue-900"
+        class="flex gap-2 justify-center items-center transition-all hover:text-blue-900"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -26,7 +26,7 @@
     <li>
       <a
         href="#skills"
-        class="flex flex-col sm:flex-row gap-2 justify-center items-center transition-all hover:text-blue-900"
+        class="flex gap-2 justify-center items-center transition-all hover:text-blue-900"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -46,7 +46,7 @@
     <li>
       <a
         href="#experience"
-        class="flex flex-col sm:flex-row gap-2 justify-center items-center transition-all hover:text-blue-900"
+        class="flex gap-2 justify-center items-center transition-all hover:text-blue-900"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -66,7 +66,7 @@
     <li>
       <a
         href="#projects"
-        class="flex flex-col sm:flex-row gap-2 justify-center items-center transition-all hover:text-blue-900"
+        class="flex gap-2 justify-center items-center transition-all hover:text-blue-900"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
