--- a/src/components/CardProfile.astro
+++ b/src/components/CardProfile.astro
@@ -19,7 +19,7 @@ import Image from "astro/components/Image.astro";
   <div
     class="w-[305px] sm:w-[450px] flex flex-col text-white justify-center items-center"
   >
-    <h1 class="text-2xl uppercase font-extrabold typing-text">Hello, I'm Angel!</h1>
+    <h1 class="text-2xl uppercase font-extrabold">Hello, I'm Angel!</h1>
     <h2 class="text-md text-yellow-300 font-semibold">
       Welcome to my portfolio!
     </h2>
@@ -31,31 +31,3 @@ import Image from "astro/components/Image.astro";
     </p>
   </div>
 </article>
-
-<style>
-  .typing-text {
-      border-right: 2px solid;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      animation: typing 4s steps(16) forwards infinite, blink 0.75s step-end infinite;
-    }
-
-    @keyframes typing {
-      from {
-        width: 0;
-      }
-      to {
-        width: 16ch; /* 14 characters in "Hello, I'm Angel!" */
-      }
-    }
-
-    @keyframes blink {
-      from {
-        border-right-color: rgb(255, 255, 255);
-      }
-      to {
-        border-right-color: transparent;
-      }
-    }
-</style>
