--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -9,7 +9,7 @@ const years = Math.floor((today.getTime() - dateBirthday.getTime()) / (1000 * 60
 
 ---
 
-<article class="flex flex-col gap-4 justify-center items-center" id="about">
+<article class="flex flex-col gap-4 justify-center items-center reveal" id="about">
   <h2
     class="text-2xl font-extrabold p-2 text-white uppercase flex justify-center items-center gap-3"
   >
