--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@
  const year = date.getFullYear()
 ---
 
-<footer class="text-white p-4 text-sm">
+<footer class="text-white p-4 text-sm reveal">
     <p>&copy; {year} Luis Angel Fernandez. All Rights Reserved.</p>
 </footer>
