--- a/src/components/SocialMedias.astro
+++ b/src/components/SocialMedias.astro
@@ -1,7 +1,7 @@
 <div class="w-auto flex justify-center items-center gap-4">
   <a
     href="https://www.youtube.com/@programayacode"
-    class="flex gap-2 justify-center items-center text-blue-400"
+    class="flex gap-2 justify-center items-center text-blue-400 reveal"
   >
     <svg
       viewBox="0 0 256 180"
@@ -19,7 +19,7 @@
   </a>
   <a
     href="https://www.linkedin.com/in/luis-angel-fern%C3%A1ndez-9073282bb/"
-    class="flex gap-2 justify-center items-center text-blue-400"
+    class="flex gap-2 justify-center items-center text-blue-400 reveal"
   >
     <svg
       width="25"
@@ -35,7 +35,7 @@
   </a>
   <a
     href="https://github.com/luisangelf11"
-    class="flex gap-2 justify-center items-center text-blue-400"
+    class="flex gap-2 justify-center items-center text-blue-400 reveal"
   >
     <svg
       viewBox="0 0 256 250"
