new-projects integrated

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,8 +5,26 @@ import witc from "../assets/witc.png";
 import notas from "../assets/notas.png";
 import nest from "../assets/nest.jpg";
 import ipad from "../assets/ipad.png"
+import chat from '../assets/chat.jpg'
+import akademico from '../assets/akademico.jpg'
 
 const projects = [
+{
+    name: "Indice Akademico",
+    desc: "This app allows you to calculate the academic index obtained.",
+    urlImg: akademico,
+    skills: ["vue", "tailwind", "typescript", "vite"],
+    github: "https://github.com/luisangelf11/indice-akademico",
+    preview: "https://indice-akademico.vercel.app/",
+  },
+  {
+    name: "Dev Community",
+    desc: "It's a chat application for developers like discord, where you can meet and talk to others developers of the community. This is a personal project.",
+    urlImg: chat,
+    skills: ["nest js", "tailwind", "typescript", "react", "sqlite"],
+    github: "https://github.com/luisangelf11/dev-community",
+    preview: "",
+  },
   {
     name: "Ecommerce app",
     desc: "This app was developed as a university project together with two friends. It is an app that allows you to make purchases using PayPal as a payment gateway.",
