--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -20,5 +20,6 @@
         <img src="https://www.rapidbrains.com/assets/img/services/rapidbrains-expressjs.webp" alt="express" class="w-[50px] h-[50px]">
         <img src="https://reactrouter.com/_brand/React%20Router%20Brand%20Assets/React%20Router%20Logo/Light.png" alt="router-dom" class="w-[50px] h-[35px]">
         <img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="supabase" class="w-[40px] h-[50px]">
+        <img src="https://www.golden-team.org/static/services/vuejs.webp" alt="vue-js" class="w-[40px] h-[40px]">
     </div>
 </article>
